--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,11 +6,13 @@
 
     <uses-sdk
         android:minSdkVersion="14"
-        android:targetSdkVersion="14" />
+        android:targetSdkVersion="17" />
 
     <permission
         android:name="com.tictactoe.permission.C2D_MESSAGE"
         android:protectionLevel="signature" />
+
+    <uses-permission android:name="com.tictactoe.permission.C2D_MESSAGE" />
 
     <!-- App receives GCM messages. -->
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
@@ -20,14 +22,15 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <!-- Keeps the processor from sleeping when a message is received. -->
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-    
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.USE_CREDENTIALS" />
 
     <application
+        android:name="TicTacToeApp"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
+        android:persistent="true"
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.tictactoe.HomeActivity"
@@ -45,12 +48,11 @@
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
                 <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
-                <category android:name="com.saketh" />
+                <category android:name="com.tictactoe" />
             </intent-filter>
         </receiver>
-        
+
         <service android:name=".GCMIntentService" />
-
-
     </application>
+
 </manifest>
